--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
 	"name": "new-fractal-folder",
 	"displayName": "New Fractal Folder",
 	"description": "Create a twig, scss, and config.js file with the same name of a new folder",
-	"version": "0.0.4",
+	"version": "0.1.0",
   "publisher": "baerkins",
+  "keywords": [
+    "fractal",
+    "create file"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/baerkins/vscode-fractal-folder.git"
@@ -37,21 +41,16 @@
 					],
 					"default": "js",
 					"description": "Type of config file to generate"
-				},
-				"new-fractal-folder.sassOptions": {
-					"type": "string",
-					"enum": [
-						"Create .scss file",
-						"Create .sass file",
-						"Do not generate sass file"
-					],
-					"default": "Create .scss file",
-					"description": "Sass options."
         },
         "new-fractal-folder.readmeFile": {
 					"type": "boolean",
           "default": false,
 					"description": "Create README.md file"
+        },
+        "new-fractal-folder.customExtensions": {
+					"type": "string",
+					"default": "",
+					"description": "A comma seperated list of file extensions to create with folder name, without proceeding dot. Example: `scss,sass,less,styl`"
 				}
 			}
 		},
