--- a/package.json
+++ b/package.json
@@ -74,10 +74,13 @@
 		"test": "node ./node_modules/vscode/bin/test"
 	},
 	"devDependencies": {
-		"@types/mocha": "^2.2.42",
-		"@types/node": "^10.12.21",
-		"eslint": "^5.13.0",
-		"typescript": "^3.3.1",
+		"@types/mocha": "^9.0.0",
+		"@types/node": "^16.11.7",
+		"eslint": "^8.2.0",
+		"typescript": "^4.4.4",
 		"vscode": "^1.1.30"
+	},
+	"dependencies": {
+		"@types/vscode": "^1.62.0"
 	}
 }
